# media-rss-reader

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  feeds.opml  pyproject.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-04-27-media-rss-reader.md  2026-04-30-ui-improvements.md  2026-05-01-feed-refresh-seen-items-video-autoscroll.md  2026-05-02-autoscroll-gif-seen-fixes.md  2026-05-02-documentation.md  2026-05-07-authentication.md
docs/superpowers/specs/: 2026-04-27-media-rss-reader-design.md  2026-04-30-ui-improvements-design.md  2026-05-01-feed-refresh-seen-items-video-autoscroll-design.md  2026-05-02-autoscroll-gif-seen-fixes-design.md  2026-05-02-documentation-design.md  2026-05-07-authentication-design.md
src/: config.py  main.py  scheduler.py
src/api/: feeds.py  items.py  media.py
src/auth/: lockout.py  middleware.py  routes.py  session.py  totp.py
src/db/: connection.py  migrations.py  schema.py
src/feeds/: fetcher.py  opml.py  sync.py
src/media/: cache.py  detector.py  prefetch.py
src/static/: app.js  index.html  login.html  qrcode.min.js  setup.html  style.css
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_config.py  test_db.py  test_detector.py  test_fetcher.py  test_main.py  test_migrations.py  test_opml.py  test_prefetch.py  test_scheduler.py  test_sync.py
